<resources>
    <string name="app_name">Pace Arcadian</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="prompt_current_password">Current password</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered? Login now!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="profile">PROFILE</string>
    <string name="btn_edit_profile">EDIT PROFILE</string>
    <string name="btn_save_profile">SAVE</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_graduation_year">Graduation Year</string>
    <string name="user_reputation">Reputation</string>
    <string name="fields_required">All fields are required</string>
    <string name="invalid_graduation_year">Graduation year entered is invalid</string>
    <string name="profile_updated">Profile Successfully Updated</string>
    <string name="btn_edit_photo">Edit photo</string>
    <string name="description">Description:</string>
    <string name="title">Title:</string>
    <string name="hint_title">Notes, Books, Tickets..</string>
    <string name="hint_description">Enter description</string>
    <string name="save_item">Save</string>
    <string name="enter_value_for_title">Please enter a value for title.</string>
    <string name="enter_value_for_description">Please enter a description.</string>
    <string name="rating">RATING</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="graduation_year">Graduation Year:</string>
    <string name="email_text_view">Email:</string>
    <string name="inventory">INVENTORY</string>
    <string name="tradeFeed">Trade Feed</string>
    <string name="home">HOME</string>
    <string name="cancel">CANCEL</string>
    <string name="back">BACK</string>
    <string name="go_back">GO BACK</string>
    <string name="category">Category:</string>
    <string name="item_title">Item Title</string>
    <string name="trade">Trade</string>
    <string name="trade_manager">Trade Manager</string>
    <string name="trade_requests">Trade Requests</string>
    <string name="trades_requested">Trades Requested</string>
    <string name="no_trade_requests">No Trade Requests</string>
    <string name="select_item_to_trade">What item do you want to trade?</string>
    <string name="request">Request</string>
    <string name="inventory_list_is_empty">Inventory List is empty!</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="offered_item">Offered Item</string>
    <string name="requested_item">Requested Item</string>
    <string name="requested">Item requested successfully.</string>
    <string-array name="category_array">
        <item>APPARELS</item>
        <item>BOOKS</item>
        <item>EATABLES</item>
        <item>ELECTRONICS</item>
        <item>FASHION ACCESSORIES</item>
        <item>FURNITURE</item>
        <item>MEDIA</item>
        <item>SHOES</item>
        <item>SPORTS</item>
        <item>TICKETS</item>
        <item>OTHER</item>
    </string-array>
    <string name="RequestedTitle">Title:-</string>
    <string name="RequestedTo">Requested To:-</string>
    <string name="RequestedStatus">Status:-</string>
    <string name="requested_item_new">Requested Item:</string>
    <string name="add_inventory_items_to_trade">Add Inventory Items to Trade!</string>
    <string name="inventory_list_is_empty_start_adding">Inventory List is empty! Start Adding..</string>
    <string name="trade_feed_empty">Trade Feed Empty!</string>
    <string name="no_trade_requested">No Trade Requested!</string>
</resources>
