<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_margin="15dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/new_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_title"
            android:inputType="textAutoComplete"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:hint="@string/hint_title"/>

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:layout_below="@id/new_title" />

        <EditText
            android:id="@+id/new_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_description"
            android:inputType="textAutoComplete"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/hint_description" />
    </RelativeLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/save_item"
        android:onClick="onSaveButtonClicked"/>


</LinearLayout>