<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height= "200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher_profile"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:id="@+id/user_photo"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/user_photo_button"
        android:text="@string/btn_edit_photo"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edit_user_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/user_first_name"
        android:inputType="text"
        android:maxLength="20"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />
    <EditText
        android:id="@+id/edit_user_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/user_last_name"
        android:inputType="text"
        android:maxLength="20"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />
    <EditText
        android:id="@+id/edit_user_graduation_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:maxLength="4"
        android:hint="@string/user_graduation_year"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />
    <Button
        android:id="@+id/save_profile_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_save_profile"
        android:textColor="@android:color/black"
        android:textStyle="bold" />
    <Button
        android:id="@+id/cancel_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</LinearLayout>