<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/select_item_to_trade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/select_item_to_trade"
        android:layout_margin="30dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        />

    <Spinner
        android:id="@+id/items_list_dropdown"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/inventory_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_inventory_items_to_trade"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        android:layout_gravity="center"/>

        <Button
            android:id="@+id/request_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/request"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/cancel"/>


</LinearLayout>