<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:gravity="center"
    android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="200dp"
            android:layout_height= "200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher_profile"
            android:contentDescription=""
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_alignEnd="@+id/graduation_year"
            android:layout_below="@id/user_image"/>

        <TextView
            android:id="@+id/user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/first_name"
            android:textColor="@android:color/black"
            android:layout_alignTop="@+id/first_name"/>

        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_alignEnd="@+id/graduation_year"
            android:layout_below="@id/first_name"/>

        <TextView
            android:id="@+id/user_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:layout_toEndOf="@+id/last_name"
            android:layout_alignTop="@+id/last_name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/graduation_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graduation_year"
            android:layout_below="@id/last_name"/>

        <TextView
            android:id="@+id/user_graduation_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:layout_toEndOf="@+id/graduation_year"
            android:layout_alignTop="@+id/graduation_year"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/email_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text_view"
            android:layout_alignEnd="@+id/graduation_year"
            android:layout_below="@id/graduation_year"/>

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/email_2"
            android:layout_alignTop="@+id/email_2"
            android:paddingStart="20dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/user_reputation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@+id/email_2"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/edit_profile_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_edit_profile"
            android:textColor="@android:color/black"
            android:layout_below="@+id/user_reputation"
            android:textStyle="bold" />

        <Button
            android:id="@+id/go_back_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/go_back"
            android:textColor="@android:color/black"
            android:layout_below="@+id/edit_profile_button"
            android:textStyle="bold" />

</RelativeLayout>